--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       <a href="#contacto">Contacto</a>
     </nav>
     <div class="contenedor head">
-      <h1>Convertimos tus sueños en realidad</h1>
+      <h1 class="titulo">Convertimos tus sueños en realidad</h1>
       <p class="copy">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias ex fuga recusandae minus
         perspiciatis exercitationem, consequuntur vel! Enim, repudiandae eaque! Eius inventore sit est ea reprehenderit
         nemo at sed asperiores?</p>
@@ -70,10 +70,10 @@
         </div>
       </div>
     </section>
-    <!--    <section class="imagen-light">
+    <section class="imagen-light">
       <img src="./assets/icon/close.svg" alt="" class="close" />
-      <img src="" alt="" class="agregar-imagen" />
-    </section> -->
+      <img src="./assets/img/gallery-1.jpg" alt="" class="agregar-imagen" />
+    </section>
     <!-- end gallery -->
     <!-- start expert -->
     <div class="section contenedor" id="expertos">
@@ -102,17 +102,18 @@
         <p>Somos expertos en la creacion de tus sueños</p>
       </div>
       <div class="social-media">
-        <a href="/" class="social-media-icon">
+        <a href="/" class="social-media--icon">
           <i class='bx bxl-facebook'></i>
         </a>
-        <a href="/" class="social-media-icon">
+        <a href="/" class="social-media--icon">
           <i class='bx bxl-twitter'></i>
         </a>
-        <a href="/" class="social-media-icon">
+        <a href="/" class="social-media--icon">
           <i class='bx bxl-instagram'></i>
         </a>
       </div>
     </div>
+    <div class="line"></div>
   </footer>
 
 
